# libs

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/modules/: grpc.cmake  libelf.cmake  libscap.cmake  libsinsp.cmake  njson.cmake
docs/: report.md
driver/: ppm_events_public.h  syscall_table.c
semgrep/: insecure-api-strcpy-stpcpy-strcat.yaml  insecure-api-strncpy.yaml
test/drivers/: CMakeLists.txt
test/libscap/: CMakeLists.txt
test/modern_bpf/event_class/: event_class.cpp
userspace/libpman/: CMakeLists.txt
userspace/libscap/: CMakeLists.txt  gvisor_vtable.c  scap-int.h  scap.c  scap.h  scap_bpf.c  scap_engines.h  scap_event.c  scap_fds.c  scap_iflist.c  scap_open.h  scap_procs.c  scap_userlist.c  scap_vtable.h  userspace_flags_helpers.h
userspace/libscap/engine/bpf/: CMakeLists.txt  scap_bpf.c
userspace/libscap/engine/gvisor/: CMakeLists.txt  config.json  fillers.cpp  gvisor.cpp  gvisor.h  gvisor_parsers.cpp  gvisor_vtable.cpp  parsers.cpp  runsc.cpp  runsc.h  scap_gvisor.cpp
userspace/libscap/engine/kmod/: scap_kmod.c
userspace/libscap/engine/modern_bpf/: scap_modern_bpf.c
userspace/libscap/engine/nodriver/: nodriver.c
userspace/libscap/engine/noop/: CMakeLists.txt  noop.c  noop.h
userspace/libscap/engine/savefile/: CMakeLists.txt  scap_savefile.c
userspace/libscap/engine/source_plugin/: source_plugin.c
userspace/libscap/engine/udig/: scap_udig.c
userspace/libscap/inmem_generator/: CMakeLists.txt  inmem_generator_vtable.c  scap_event_helpers.c  scap_event_helpers.h
userspace/libscap/linux/: CMakeLists.txt  scap_ppm_sc.c
userspace/libscap/ringbuffer/: devset.c
userspace/libscap/scap_gvisor/: CMakeLists.txt  config.json  demo-ruleset.yaml  gvisor.cpp  gvisor.h  gvisor_parsers.cpp  gvisor_vtable.c  gvisor_vtable.cpp
userspace/libscap/test/: CMakeLists.txt  scap_event.ut.cpp  scap_gvisor_parsers.ut.cpp
userspace/libsinsp/: CMakeLists.txt  container.cpp  container.h  container_info.cpp  container_info.h  cri.h  cri.hpp  event.cpp  event.h  filterchecks.cpp  parsers.cpp  plugin.cpp  plugin.h  sinsp.cpp  sinsp.h  sinsp_filtercheck_container.cpp  unix_paths.cpp
userspace/libsinsp/concatenate_paths_tester/: CMakeLists.txt  concatenate_paths_tester.cpp
userspace/libsinsp/container_engine/: rkt.cpp
userspace/libsinsp/container_engine/docker/: async_source.cpp  async_source.h
userspace/libsinsp/examples/: CMakeLists.txt
userspace/libsinsp/filter/: parser.cpp
userspace/libsinsp/sinsp_debug/: CMakeLists.txt
userspace/libsinsp/test/: CMakeLists.txt  filter_op_numeric_compare.ut.cpp  gvisor_config.ut.cpp  sinsp_utils.ut.cpp  sinsp_with_test_input.h
userspace/libsinsp/test/container_engine/: container_parser_cri_containerd.ut.cpp  container_parser_cri_crio.ut.cpp
